@@ -16,7 +16,7 @@ Version: 0.2.0
 Depends: R (>= 3.1.3), methods
 URL: https://github.com/data-cleaning/validate
 BugReports: https://github.com/data-cleaning/validate/issues
-Date: 2016-06-24
+Date: 2017-08-02
 Imports:
     graphics,
     settings,
